--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Mobile Metas -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Site Metas -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -23,10 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
     <!-- fonts style -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet" />
@@ -52,9 +46,7 @@
                   <div class="containertaxi">
                     <svg viewBox="0 0 960 300">
                       <symbol id="s-text">
-                        <text text-anchor="middle" x="50%" y="80%">
-                          מוניות יבנה
-                        </text>
+                        <text text-anchor="middle" x="50%" y="80%">מוניות יבנה</text>
                       </symbol>
                       <g class="g-ants">
                         <use xlink:href="#s-text" class="text-copy"></use>
@@ -66,18 +58,9 @@
                       </g>
                     </svg>
                   </div>
-                  <h2
-                    class="d-flex justify-content-center"
-                    style="font-size: 7vw"
-                  >
-                    058-588-5880
-                  </h2>
+                  <h2 class="d-flex justify-content-center number">058-588-5880</h2>
                 </div>
-                <div
-                  id="carouselExampleIndicators"
-                  class="carousel slide"
-                  data-ride="carousel"
-                >
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                   <!-- <ol class="carousel-indicators">
                     <li
                       data-target="#carouselExampleIndicators"
@@ -101,7 +84,7 @@
                       data-slide-to="4"
                     ></li>
                   </ol> -->
-                  <div class="carousel-inner">
+                  <!-- <div class="carousel-inner">
                     <div class="carousel-item active">
                       <div class="img-box">
                         <img src="images/taxi1.png" alt="" />
@@ -127,7 +110,7 @@
                         <img src="images/taxi1.png" alt="" />
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -142,7 +125,7 @@
     <section class="service_section layout_padding watertower">
       <div class="container">
         <div class="heading_container d-flex justify-content-center">
-          <h2 class="animate-charcter">השירותים שלנו</h2>
+          <!-- <h2 class="animate-charcter">השירותים שלנו</h2> -->
         </div>
         <div class="service_container">
           <div class="box">
@@ -281,19 +264,12 @@
                 </li>
               </ul>
               <div class="text-box">
-                <h4 class="text-center">
-                  שמירה מהירה של פרטי יצירת קשר שלנו ישירות למכשיר הנייד שלכם
-                  בלחיצה אחת
-                </h4>
+                <h4 class="text-center">שמירה מהירה של פרטי יצירת קשר שלנו ישירות למכשיר הנייד שלכם בלחיצה אחת</h4>
               </div>
 
               <div class="btn-box d-flex justify-content-center">
                 <a class="" href="files/תחנת מוניות יבנה.vcf" download>
-                  <img
-                    src="images/saveConract.png"
-                    style="width: 200px"
-                    alt=""
-                  />
+                  <img src="images/saveConract.png" style="width: 200px" alt="" />
                 </a>
               </div>
             </div>
@@ -327,17 +303,8 @@
         </div>
         <div class="whatsappicon">
           <!-- wpp-btn-mobile -->
-          <div
-            class="phone-call cbh-phone cbh-green cbh-show cbh-static"
-            id="clbh_phone_div"
-          >
-            <a
-              id="WhatsApp-button"
-              href="https://wa.me/0585885880"
-              target="_blank"
-              class="phoneJs"
-              title="WhatsApp"
-            >
+          <div class="phone-call cbh-phone cbh-green cbh-show cbh-static" id="clbh_phone_div">
+            <a id="WhatsApp-button" href="https://wa.me/0585885880" target="_blank" class="phoneJs" title="WhatsApp">
               <div class="cbh-ph-circle"></div>
               <div class="cbh-ph-circle-fill"></div>
               <div class="cbh-ph-img-circle1"></div>
@@ -387,13 +354,7 @@
         <p>
           &copy; כל הזכויות שמורות 2023 -
           <span
-            ><b
-              ><a
-                style="text-decoration: underline"
-                href="mailto:gal9amar@gmail.com"
-                >גל עמר</a
-              ></b
-            ></span
+            ><b><a style="text-decoration: underline" href="mailto:gal9amar@gmail.com">גל עמר</a></b></span
           >
         </p>
       </div>
